[package]
name        = "concrust"
version     = "0.0.2"
authors     = ["Alex-Diez <alexvic.amatory@gmail.com>"]
readme      = "README.md"
exclude     = [
  ".gitignore",
  "nursery/**/*"
]

[lib]
name = "concrust"
path = "src/lib.rs"

[[test]]
name = "test"
path = "test/lib.rs"

[dependencies]
stainless = { git = "https://github.com/reem/stainless.git" }
