[package]
name        = "concrust"
version     = "0.0.1"
authors     = ["Alex-Diez <alexvic.amatory@gmail.com>"]
readme      = "README.md"
exclude     = [
	".gitignore"
]

[lib]
name = "concrust"
path = "src/lib.rs"

[[test]]
name = "test"
path = "test/lib.rs"

[dependencies.stainless]
git = "https://github.com/Alex-Diez/stainless.git"
branch = "ignore_tests"

[dependencies]
clippy = "0.0.37"
expectest = "0.4.1"
