[package]
name        = "concrust"
version     = "0.0.2-SNAPSHOT"
authors     = ["Alex-Diez <alexvic.amatory@gmail.com>"]
readme      = "README.md"
exclude     = [
	".gitignore"
]

[lib]
name = "concrust"
path = "src/lib.rs"

[[test]]
name = "test"
path = "test/lib.rs"

[dependencies]
clippy = "0.0.37"

[dev-dependencies.stainless]
git = "https://github.com/Alex-Diez/stainless.git"
branch = "ignore_tests"

[dev-dependencies.criterion]
git = "https://github.com/japaric/criterion.rs.git"

[dev-dependencies]
expectest = "0.4.1"
