[package]
name        = "nursery"
version     = "0.0.2"
authors     = ["Alex-Diez <alexvic.amatory@gmail.com>"]
readme      = "README.md"
exclude     = [
  ".gitignore",
  "test/**/*",
]

[lib]
name="nursery"

[[test]]
name = "test"
path = "test/lib.rs"

[dependencies]
stainless = { git = "https://github.com/reem/stainless.git" }
